--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,39 @@ tags
 mkmf.log
 *.profdata
 *.profraw
+
+# RTC ignores
+# Premake generated files #
+###########################
+*.vcxproj*
+*.sln
+Makefile
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.project
+
+# VS generated files #
+######################
+ipch/
+*.suo
+*.opensdf
+*.sdf
+*.vcxproj
+*.filters
+*.user
+
+# Qt files
+###########################
+*.config
+*.creator
+*.files
+*.includes
+moc/
